--- a/code/PokerHud.html
+++ b/code/PokerHud.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="minimalhud.scss">
+<link rel="stylesheet" href="pokerhud.scss">
 
 <div class="root">
 	<div class="cursor-hack"></div>
