Stop player from moving camera
Add card textures
Add custom skybox
Add basic animator
Improve HUD code
Give players money
Add net random class

--- a/code/PokerHud.html
+++ b/code/PokerHud.html
@@ -1,8 +1,7 @@
 
 <link rel="stylesheet" href="pokerhud.scss">
 
-<div class="root">
+<div>
 	<div class="cursor-hack"></div>
-
-	<text class="title">$0</text>
+	<text @text="PlayerMoney" class="money-text"></text>
 </div> 
