--- a/code/UI/LocalPlayerHud.html
+++ b/code/UI/LocalPlayerHud.html
@@ -2,6 +2,6 @@
 <link rel="stylesheet" href="LocalPlayerHud.scss">
 
 <div>
-	<MaterialIcon name="shopping_cart"></MaterialIcon>
-	<text @text="PlayerMoney" class="money-text"></text>
-</div> 
+    <icon>shopping_cart</icon>
+    <text @text="PlayerMoney" class="money-text"></text>
+</div>
